# xalertu

./: .gitignore  CMakeLists.txt  Messages.sh  README  mailer.cpp  mousesensor.cpp  plasma-applet-xalertu.desktop  ui_bkodamaConfig.h  usbpad.cpp  usbpad.h  xalertu.cpp  xalertu.h
debian/: README.Debian  changelog  control  docs  rules
form/: xalertuConfig.ui  xalertuConfigMotionSensor.ui  xalertuConfigRemote.ui  xalertuConfigScreenshot.ui  xalertuConfigSound.ui  xalertuConfigWebCam.ui
icons/: hisc-status-armed.svgz
trunk/: CHANGES  CMakeLists.txt  Messages.sh  README  keyboardsensor.cpp  keyboardsensor.h  mousesensor.h  plasma-applet-xalertu.desktop  ui_xalertuConfig.h  xalertu-plasmoid.notifyrc  xalertu.cpp  xalertu.h  xalertu.kdev4
trunk/debian/: copyright  rules
trunk/form/: xalertuConfigEmail.ui  xalertuConfigRemote.ui  xalertuConfigScreenshot.ui  xalertuConfigSound.ui  xalertuConfigWebCam.ui
trunk/icons/: hisc-status-disarmed.svgz
trunk/sounds/: CMakeLists.txt
